# boilerplate-business

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt
docs/: README.md
src/: main.py
src/adapters/dtos/: interfaces.py
src/adapters/interfaces/: __init__.py  document_database_service.py  observability_service.py
src/adapters/types/: __init__.py  object_id.py
src/adapters/views/: health_check.py  interfaces.py
src/business/: exceptions.py
src/business/ports/: interfaces.py
src/business/use_cases/: __init__.py  check_health.py  interfaces.py
src/containers/: __init__.py  adapters_layer.py  business_layer.py  frameworks_layer.py  system_configuration.py  system_configuration.yaml
src/frameworks/fastapi/: __init__.py  manager.py
src/frameworks/motor/: __init__.py  manager.py
