[tool.poetry]
name = "business"
version = "0.0.0"
description = "Boilerplate for business services that use MongoDB as database."
authors = ["Matheus"]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
fastapi = "^0.89.1"
motor = "^3.1.1"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
certifi = "^2022.12.7"
python-dateutil = "^2.8.2"
pydantic = {extras = ["email"], version = "^1.10.4"}

[tool.poetry.dev-dependencies]
commitizen = "^2.40.0"
python-semantic-release = "^7.33.0"
pre-commit = "^3.0.2"
black = "^22.12.0"
flake8 = "^5.0.4"
flake8-copyright = "^0.2.3"
isort = "^5.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
pytest-tornasync = "^0.6.0"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.0"
requests = "^2.28.2"
types-requests = "^2.28.11"
types-python-dateutil = "^2.8.19"
Twisted = "^22.10.0"
httpx = "^0.23.3"
types-PyYAML = "^6.0.12"

[tool.semantic_release]
version_variable = ["src/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = false

[tool.commitizen]
version = "2.40.0"
tag_format = "v$version"
version_files = ["src/__init__.py:__version__"]

[tool.isort]
profile = "black"
line_length = "120"
known_first_party = ["commitizen", "tests"]

[tool.black]
line-length = "120"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "10"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203", "E0611"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "15"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
